feat(handler): add support for queue listeners and enhance HandlerRegistry